# mussia46

./: .dockerignore  Cargo.toml  README.md  Taskfile.yml  Tiltfile  bun.lockb  justfile  nx.json  package.json  test.ts
.cargo/: config.toml
.github/workflows/: ci.yml
apps/lili/registry/: Cargo.toml  project.json
apps/lili/registry/src/: main.rs
apps/lili/storage/: Cargo.toml  project.json
apps/playground/ai/: Cargo.toml  project.json
apps/playground/ai/src/: main.rs
apps/playground/api/: Cargo.toml  Tiltfile
apps/playground/api/k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
apps/playground/api/k8s/overlays/dev/: patch.yaml
apps/playground/api/k8s/overlays/prod/: kustomization.yaml  patch.yaml
apps/playground/api/src/: app_state.rs  main.rs  swagger.rs
apps/playground/api/src/api/: mod.rs
apps/playground/api/src/api/book/: controller.rs  model.rs  router.rs
apps/playground/api/src/api/operations/: controller.rs  mod.rs  model.rs  router.rs
apps/playground/api/src/api/sql_book/: controller.rs  mod.rs  model.rs  router.rs
apps/playground/api/src/api/sse/: controller.rs  router.rs
apps/playground/api/src/api/task/: controller.rs  router.rs
apps/playground/api/src/api/task_redis_pubsub/: controller.rs  router.rs
apps/playground/api/src/api/task_redis_response/: controller.rs  model.rs  router.rs
apps/playground/api/src/api/todo/: controller.rs  model.rs  router.rs
apps/playground/cli/: Cargo.toml  Tiltfile  project.json
apps/playground/cli/src/: errors.rs  main.rs
apps/playground/cli/src/commands/: mod.rs  subcommand.rs
apps/playground/cli/src/commands/task/: mod.rs
apps/playground/my-solid-app/: index.html  project.json  tsconfig.app.json  vite.config.ts
apps/playground/my-solid-app-e2e/: playwright.config.ts  project.json
apps/playground/operator/: Cargo.toml  project.json
apps/playground/operator/src/: main.rs
apps/playground/redis/pubsub/: Cargo.toml  project.json
apps/playground/redis/pubsub/src/: main.rs
apps/playground/redis/request_response/: Cargo.toml  project.json
apps/playground/redis/request_response/src/: main.rs  message.rs
apps/playground/redis/stream/: Cargo.toml  project.json
apps/playground/redis/stream/src/: main.rs
generations/crossplane/bucket/bucket/: example.yaml  project.json
generations/kcl/combined/: combined.yaml  kcl.mod  main.k
generations/kcl/combined/be/: config.k  functions.k
generations/kcl/crossplane/: justfile
generations/kcl/crossplane/my-demo/: upbound.yaml
generations/kcl/crossplane/silly-demo/: crossplane.yaml
generations/kcl/custom-mine/myapp/: README.md  go.mod  go.sum  timoni.cue
generations/kcl/funcs/: kcl.mod  main.k
generations/kcl/my_package/: kcl.mod  main.k  new-storage.yaml
generations/kcl/my_package/be/: app.k  config.k  config_test.k  functions.k  functions_test.k
generations/kcl/registry/: kcl.mod  main.k  registry.yaml
generations/kcl/registry/be/: config.k
libs/cli/: Cargo.toml  project.json
libs/cli/src/: lib.rs
libs/generals/: Cargo.toml  project.json
libs/generals/src/: envs.rs  lib.rs  time.rs  tracing.rs
libs/models/: Cargo.toml  project.json
libs/models/src/: book.rs  lib.rs  streams.rs  task.rs  todo.rs
libs/proc_macros/: Cargo.toml  project.json
libs/proc_macros/db-resource/: Cargo.toml
libs/proc_macros/db-resource/src/: lib.rs
libs/proc_macros/db-resource/tests/: 01-parse.rs  progress.rs
libs/proc_macros/reflective/: Cargo.toml
libs/proc_macros/reflective/src/: lib.rs
libs/proc_macros/reflective/tests/: 01-parse.rs
libs/proc_macros/src/: lib.rs
libs/rpc/: Cargo.toml  project.json
libs/services/: Cargo.toml
libs/services/src/: lib.rs
libs/services/src/influx/: connector.rs  mod.rs  services.rs
libs/services/src/mongo/: connector.rs  filter_and_options.rs  mod.rs  serialize.rs  service.rs
libs/services/src/postgres/: connector.rs  mod.rs  queries.rs  results.rs  service.rs
libs/services/src/redis/: acknowledge.rs  connector.rs  message.rs  mod.rs  push_response.rs
libs/shared/: Cargo.toml  project.json
libs/shared/benches/: sorting_benchmark.rs
libs/shared/src/: app.rs  errors.rs  handlers.rs  lib.rs  shutdown.rs
manifests/: bundle.cue  justfile  kustomization.yaml
manifests/cloud-build/: job1.yaml
manifests/dbs/: kustomization.yml  mongodb.yaml  postgres.yaml  redis.yaml  sda.sql
manifests/dbs/migrations/postgres/: 0001_books.sql  0002_todos.sql  0003_tasks.sql
manifests/dockers/: rust.Dockerfile
manifests/gitops/dependecies/apps/: fiber-mongo.yaml  first-rust-app.yaml
manifests/gitops/dependecies/argo-workflows/: rbac.yaml
manifests/gitops/dependecies/crossplane/: example-bucket-kcl.yaml  example-bucket.yaml  example-combined.yaml  index.yaml  provider-config.yaml  provider-helm-incluster.yaml  provider-kubernetes-incluster.yaml  providers.yaml  storage.yaml
manifests/gitops/dependecies/external-secrets/: external-secrets.yaml
manifests/gitops/flux/: index.yaml
manifests/gitops/infra/argocd/: index.yaml
manifests/gitops/infra/argocd-events/: index.yaml
manifests/gitops/infra/argocd-rollouts/: index.yaml
manifests/gitops/infra/argocd-workflows/: index.yaml
manifests/gitops/infra/cnpg/: index.yaml
manifests/gitops/infra/crossplane/: index.yaml  komoplane.yaml
manifests/gitops/infra/external-secrets/: index.yaml
manifests/gitops/infra/harbor/: index.yaml
manifests/gitops/infra/kafka/: index.yaml
manifests/gitops/infra/keda/: index.yaml
manifests/gitops/infra/kubeshark/: index.yaml
manifests/gitops/infra/loki/: index.yaml
manifests/gitops/infra/loki-stack/: index.yaml
manifests/grpc/: buf.gen.yaml  buf.yaml
manifests/grpc/proto/: kustomization.yaml  tasks.proto  users.proto
manifests/kustomize/base/: configmap.yaml  deployment.yaml  kustomization.yaml  sa.yaml  service.yaml
manifests/scripts/: ai.nu  cluster.nu  greet.nu  nx.nu
tests/: 01-todo.js  duplicates.js  first-non-repeated-str.js  largest-number.js  longest-str.js  lowest-numer.js  missing-number.js  practice-1.md  practice-2.md  shit.js
(+225 files in other folders)
