[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
proc_macros = { workspace = true }
generals = { workspace = true }
#axum_utils = { workspace = true }
models = { workspace = true }
#envs = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bb8 = { workspace = true, optional = false }
bb8-redis = { workspace = true, optional = false }
redis = { workspace = true, optional = false }
anyhow = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, optional = false }
influxdb2 = { workspace = true, optional = false }
#influxdb2-derive.workspace = true
#chrono.workspace = true
mongodb = { workspace = true, optional = false }

#[features]
###default = ["proc_macros", "general", "axum", "tracing", "serde", "thiserror", "serde_json", "bb8", "bb8-redis", "redis", "mongodb", "tokio", "sqlx", "influxdb2", "influxdb2-derive", "chrono"]
#mongo = ["dep:mongodb"]
#sql = ["dep:sqlx"]
#redis = ["dep:redis", "dep:bb8", "dep:bb8-redis"]
#influx = ["dep:influxdb2"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
