[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
mongodb.workspace = true
serde_json.workspace = true
influxdb2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
bb8.workspace = true
redis.workspace = true
validator.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
utoipa-scalar.workspace = true
utoipa-rapidoc.workspace = true
utoipa-redoc.workspace = true
tower-http.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
