[package]
name = "playground_ai"
version = "0.1.0"
edition = "2021"


[dependencies]
#serde.workspace = true
#chrono.workspace = true
#reqwest.workspace = true
#tokio.workspace = true
#polars = { version = "0.46.0", features = ["full"] }

#pulsar = "6.3.0"
#burn = {version = "0.16.0", features = ["default", "wgpu"]}

#serde_json.workspace = true
#kcl-lib = { version = "0.2.35", features = ["tabled", "pyo3"] }
#kclvm-runtime = { git = "https://github.com/kcl-lang/kcl", version = "0.11.1" }
#kclvm-parser = { git = "https://github.com/kcl-lang/kcl", version = "0.11.1" }
# anyhow.workspace = true
#protoc = {version = "2.28", features = []}
#rust-bert = "0.20"
#tch = "0.10.3"  # PyTorch bindings for Rust
#tokio = { version = "1.43", features = ["default"] }
#clap = { version = "4.5", features = ["derive"] }
#kclvm-runtime = { git = "https://github.com/kcl-lang/kcl", version = "0.11.1" }
#kalosm = {version = "0.4", features = ["full"]}
#tokio.workspace = true
#serde_json.workspace = true
#kclvm-runtime = { git = "https://github.com/kcl-lang/kcl", version = "0.11.1" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
