[package]
name = "playground_operator"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
http = "1.2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
