[package]
name = "db-resource"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0" }
proc_macros = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "test", "derive", "full"] }
quote = { version = "1.0", features = ["proc-macro"] }
pluralizer = '0.4'
