[package]
name = "playground_redis_pubsub"
version = "0.1.0"
edition = "2021"


[dependencies]
services.workspace = true
generals.workspace = true
models.workspace = true
anyhow.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
#utils.workspace = true
tracing.workspace = true
uuid.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
